--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ python-dotenv>=1.0,<2.0
 psycopg[binary]>=3.1,<3.2
 passlib[bcrypt]>=1.7,<1.8
 requests>=2.31,<2.33
+google-auth>=2.23.0
+google-auth-oauthlib>=1.1.0
+google-auth-httplib2>=0.1.1
+google-api-python-client>=2.100.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
